--- a/LatihanReport/LatihanReport.csproj
+++ b/LatihanReport/LatihanReport.csproj
@@ -84,6 +84,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="wehrisiniygdiubahcokk.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="wehrisiniygdiubahcokk.Designer.cs">
+      <DependentUpon>wehrisiniygdiubahcokk.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
