--- a/LatihanReport/App.config
+++ b/LatihanReport/App.config
@@ -13,4 +13,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <appSettings>
+    <add key="TestString" value="DEV"/>
+    <add key="TestAngka" value="200"/>
+  </appSettings>
 </configuration>
