--- a/LatihanReport/LatihanReport.csproj
+++ b/LatihanReport/LatihanReport.csproj
@@ -47,6 +47,7 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
